# manimera

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: release.yaml
examples/animations/: demo_advance_clock_time.py  demo_fade_reveal.py  demo_lamp_glow.py  demo_pendulum_oscillation.py
examples/components/: demo_anatomical_eye.py  demo_brick.py  demo_cathedral_lamp.py  demo_clock.py  demo_feather.py  demo_network_tower.py  demo_pendulum.py
src/manimera/: __init__.py
src/manimera/animations/: __init__.py
src/manimera/cli/: main.py  project.py  scene.py  templates.py  workflow.py
src/manimera/components/: __init__.py  anatomical_eye.py  clock.py
src/manimera/constants/: __init__.py  colors.py
src/manimera/runtime/: __init__.py  base_scene.py  engine.py  manager.py  render.py  scene.py  settings.py
src/manimera/terminal/: __init__.py  banner.py  monitor.py
