[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "manimera"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "manim>=0.19.1",
]

[tool.bumpver]
current_version = "0.1.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit = true
tag = true
push = true
tag_prefix = "v"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
